# DagorEngine

./: .buildinfo  .clang-format  .engine.qdox  .gitattributes  .gitignore  .quirrel_modules.qdox  DagorEngine.rev.txt  DagorEngine.sln  LICENSE  README.md  assets_docs.md  build_GITest.cmd  build_GITest_WindowsOnArm64.cmd  build_Physics_WindowsOnArm64 - 副本.cmd  build_ShaderComplier_WindowsOnArm64.cmd  build_all.cmd  build_all.py  build_all.sh  build_all_WindowsOnArm64.cmd  build_all_linux.sh  build_all_macOS.sh  build_dngSceneViewer_WindowsOnArm64 .cmd  build_outerSpace_WindowsOnArm64 .cmd  build_outerSpace_WindowsOnArm64.cmd  build_tools_x64.cmd  dabuild_all.cmd  dabuild_all_linux.sh  dabuild_all_macOS.sh  dag4blend.md  genindex.html  index.html  make_devtools.py  make_devtools.sh  make_devtools_linux.py  make_devtools_macOS.py  objects.inv  search.html  searchindex.js  test_task.md
prog/1stPartyLibs/daScript/examples/pathTracer/: CMakeLists.txt  path_tracer.cpp  path_tracer.das  path_tracer_aot.cpp  runme.bat  runme_linux.sh  runme_msvc.bat  toy_path_tracer.das  toy_path_tracer_bgfx.das  toy_path_tracer_bgfx_hdr.das  toy_path_tracer_opengl.das  toy_path_tracer_opengl_hdr.das  toy_path_tracer_profile.das  toy_pathtracer_opengl_basic.das
prog/1stPartyLibs/daScript/tests/aot/: CMakeLists.txt  t_invoke_void.das  test_aot_assert.das  test_arithmetic.das  test_cpp_keyword_names.das  test_default_value_handle_field.das  test_enum_unsigned_underlying_cast.das  test_lambda_copy.das  test_lambdas.das  test_strings.das  test_structures.das  test_value_handle_iter.das  test_value_handle_ref_param.das
prog/1stPartyLibs/daScript/utils/: CMakeLists.txt
prog/1stPartyLibs/daScript/utils/aot/: main.das
prog/1stPartyLibs/daScript/utils/benchctl/: README.md  bench_args.das  bench_table.das  benchstat.das  flags.das  main.das  sql.das  table_fmt.das  utils.das
prog/1stPartyLibs/daScript/utils/common/: git_signature.das  parallel_workers.das
prog/1stPartyLibs/daScript/utils/daScript/: aot_stub.cpp  jamfile  main.cpp  unitTest.cpp
prog/1stPartyLibs/daScript/utils/das-fmt/: LICENSE  README.md  dasfmt.das  fs.das  log.das  pre-commit
prog/1stPartyLibs/daScript/utils/dasFormatter/: Readme.md  ds_parser.cpp  ds_parser.hpp  ds_parser.ypp  fmt.cpp  fmt.h  formatter.cpp  formatter.h  helpers.cpp  helpers.h  jamfile  main.cpp
prog/1stPartyLibs/daScript/utils/dascov/: README.md  main.das
prog/1stPartyLibs/daScript/utils/daslang-live/: main.cpp
prog/1stPartyLibs/daScript/utils/daspkg/: README.md  commands.das  index.das  lockfile.das  main.das  package_runner.das  test_daspkg.das  test_daspkg_git.das  utils.das
prog/1stPartyLibs/daScript/utils/detect-dupe/: README.md  canonical.das  cluster.das  exchange.das  main.das  minhash.das  patterns.das  pipeline.das  report.das  test_detect_dupe.das
prog/1stPartyLibs/daScript/utils/find-dupe/: .das_package  README.md  cluster_input.das  judge.das  judge_live.das  main.das  report.das  source_extract.das
prog/1stPartyLibs/daScript/utils/fix-lint-errors/: main.das
prog/1stPartyLibs/daScript/utils/flatten-fuzz/: .gitignore  README.md  main.das
prog/1stPartyLibs/daScript/utils/hygiene/: main.das  process.das  rule_collapse_blank_lines.das  rule_private_docs.das  rules.das  test_hygiene.das
prog/1stPartyLibs/daScript/utils/jit/: main.das
prog/1stPartyLibs/daScript/utils/lint/: main.das
prog/1stPartyLibs/daScript/utils/mcp/: README.md  ROADMAP.md  cpp_search_config.das  lint_issues.md  main.das  protocol.das  test_tools.das
prog/1stPartyLibs/daScript/utils/migrate-tables/: compound.py  migrate.sh  rules.yml  test.das  test_migrated.das
prog/1stPartyLibs/daScript/utils/perf_lint/: main.das
prog/1stPartyLibs/daScript/utils/requirefix/: main.das  requirefix.das  test_requirefix.das
prog/1stPartyLibs/daScript/utils/vscode-daslang-test/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
prog/1stPartyLibs/quirrel/quirrel/: .gitignore  CMakeLists.txt  COPYRIGHT  HISTORY  README.md  jamfile  tasks.txt  testRunner.py
prog/1stPartyLibs/quirrel/quirrel/doc/: .readthedocs.yaml  build.bat  make.bat  requirements.txt
prog/1stPartyLibs/quirrel/quirrel/helpers/: keyValueFile.h
prog/1stPartyLibs/quirrel/quirrel/include/: sq_char_class.h  sqasync.h  sqconfig.h  sqdirect.h  sqext.h  sqio.h  sqstdaux.h  sqstddatetime.h  sqstddebug.h  sqstdio.h  sqstdstring.h  sqstdsystem.h  squirrel.h
prog/1stPartyLibs/quirrel/quirrel/internal/: sq_safe_shift.h  sqstringlib.h
prog/1stPartyLibs/quirrel/quirrel/sq/: CMakeLists.txt  NO_LICENSE  con_main.cpp  jamfile  sq.cpp  sq_test_natives.cpp
prog/1stPartyLibs/quirrel/quirrel/sq_llvm_fuzzer/: _build.sh  jamfile  qirrel.dict  sq.cpp
prog/1stPartyLibs/quirrel/quirrel/sqmodules/: CMakeLists.txt  deffileaccess.cpp  helpers.cpp  helpers.h  jamfile  path.cpp  path.h  span.h  sqmodules.cpp  sqmodules.h  sqratLite.h
prog/3rdPartyLibs/arm_asr/: .gitignore  CMakeLists.txt  jamfile
prog/3rdPartyLibs/arm_asr/LICENSES/: MIT.txt
prog/3rdPartyLibs/fsr2/: .gitignore  CMakeLists.txt  ffx_fsr2.cpp  ffx_fsr2.h  ffx_fsr2_private.h  ffx_types.h  jamfile
prog/3rdPartyLibs/fsr2/dx12/: CMakeLists.txt  ffx_fsr2_dx12.cpp  ffx_fsr2_dx12.h
prog/3rdPartyLibs/fsr2/shaders/: ffx_fsr2_accumulate.h  ffx_fsr2_accumulate_pass.glsl  ffx_fsr2_accumulate_pass.hlsl  ffx_fsr2_autogen_reactive_pass.glsl  ffx_fsr2_autogen_reactive_pass.hlsl  ffx_fsr2_callbacks_glsl.h  ffx_fsr2_compute_luminance_pyramid_pass.glsl  ffx_fsr2_compute_luminance_pyramid_pass.hlsl  ffx_fsr2_depth_clip.h  ffx_fsr2_depth_clip_pass.glsl  ffx_fsr2_depth_clip_pass.hlsl  ffx_fsr2_lock_pass.glsl  ffx_fsr2_lock_pass.hlsl  ffx_fsr2_prepare_input_color_pass.glsl  ffx_fsr2_prepare_input_color_pass.hlsl  ffx_fsr2_rcas_pass.glsl  ffx_fsr2_rcas_pass.hlsl  ffx_fsr2_reconstruct_previous_depth_pass.glsl  ffx_fsr2_reconstruct_previous_depth_pass.hlsl  ffx_fsr2_tcr_autogen_pass.glsl  ffx_fsr2_tcr_autogen_pass.hlsl
prog/3rdPartyLibs/vulkan/hlslcc/: CMakeLists.txt  README  README.md  jamfile  test.cpp
(+32291 files in other folders)
